--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -2,7 +2,7 @@
 
 <div class="w-full">
     <div class="mx-auto w-full max-w-6xl px-6">
-        <div class="my-[3rem] text-center">
+        <div class="static-heading-div text-center">
             <h5 class="section-header-title-small">
                 {{ element_1.title_small }}
             </h5>
