--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -1,6 +1,6 @@
 
 
-<div class="w-full">
+<div class="max-w-[980px] mx-auto">
     <div class="mx-auto w-full max-w-6xl px-6">
         <div class="static-heading-div text-center">
             <h5 class="section-header-title-small">
@@ -18,8 +18,8 @@
 </div>
 
 
-<div class="w-full flex justify-center bg-white">
-    <div class="w-full bubble-line-container pt-5 pb-5">
+<div class="w-full bg-white">
+    <div class="w-screen bubble-line-container pt-5 pb-5">
         <div class="image-wrapper w-full">
             <img src="/browser/images/common/bubble-line.png" alt="Bubble line" width="100%" height="36px">
         </div>
@@ -28,7 +28,7 @@
 
 <!-- box 2 -->
 
-<div class="w-full flex justify-center">
+<div class="max-w-[980px] mx-auto">
 
     <div class="grid grid-cols-6 gap-4">     
 
@@ -82,7 +82,7 @@
 <!-- box 3 -->
 
 
-<div class="w-full flex justify-center">
+<div class="max-w-[980px] mx-auto">
 
     <div class="grid grid-cols-6 gap-4">     
 
@@ -168,7 +168,7 @@
 
 
 
-<div class="w-full flex justify-center bg-white">
+<div class="max-w-[980px] mx-auto">
     <div class="grid grid-cols-6 gap-4 w-full">
         <div class="col-span-4 col-start-2">
             <div class="w-full">
@@ -185,7 +185,7 @@
     </div>
 </div>
 
-<div class="w-full flex justify-center cards-container">
+<div class="max-w-[980px] mx-auto">
     <div class="grid grid-cols-6 gap-4">
         <div class="col-span-4 col-start-2 container-w980">
 
