--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -1,6 +1,6 @@
 
 
-<div class="max-w-[980px] mx-auto">
+<div class="container-w980 mx-auto">
     <div class="mx-auto w-full max-w-6xl px-6">
         <div class="static-heading-div text-center">
             <h5 class="section-header-title-small">
@@ -28,7 +28,7 @@
 
 <!-- box 2 -->
 
-<div class="max-w-[980px] mx-auto">
+<div class="container-w980 mx-auto">
 
     <div class="grid grid-cols-6 gap-4">     
 
