--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -3,9 +3,9 @@
 <div class="container-w980 mx-auto">
     <div class="mx-auto w-full max-w-6xl px-6">
         <div class="static-heading-div text-center">
-            <h5 class="section-header-title-small">
+            <h1 class="section-header-title-small">
                 {{ element_1.title_small }}
-            </h5>
+            </h1>
             <h2 class="section-header-title" id="preservation-and-dissemination-of-digital-research-data">
                 {{ element_1.title }}&nbsp;
                 <a class="anchor-link" href="{{ element_1.title_url }}" aria-label="{{ element_1.title_url_text }}">#</a>
@@ -32,15 +32,16 @@
 
     <div class="mx-auto w-full max-w-6xl px-6">
         <div class="container mission-container">
-
-            <div class="w-full flex justify-center">
-                <h1 class="section-header-title-small flex justify-center items-center">
+            <div class="static-heading-div text-center">
+                <h1 class="section-header-title-small">
                     {{ element_2.title_small }}
                 </h1>
-                <h2 class="section-header-title flex justify-center" id="institutional-affiliation-and-development-of-the-repository">
-                    {{ element_2.title }}&nbsp;<a class="anchor-link" href="{{ element_2.title_url }}" aria-label="{{ element_2.title_url_text }}">#</a>
+                <h2 class="section-header-title" id="preservation-and-dissemination-of-digital-research-data">
+                    {{ element_2.title }}&nbsp;
+                    <a class="anchor-link" href="{{ element_2.title_url }}" aria-label="{{ element_2.title_url_text }}">#</a>
                 </h2>
             </div>
+
 
             <div class='flex w-full'>
                 <div class='flex gap-6 w-full'>
