--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -30,39 +30,54 @@
 
 <div class="container-w980 mx-auto">
     <div class="container mission-container">
-        <div class="mx-auto w-full max-w-6xl px-6">
 
-            <div class="static-heading-div text-center">
-                <h1 class="section-header-title-small">
-                    {{ element_2.title_small }}
-                </h1>
-                <h2 class="section-header-title" id="institutional-affiliation-and-development-of-the-repository">
-                    {{ element_2.title }}&nbsp;
-                    <a class="anchor-link" href="{{ element_2.title_url }}" aria-label="{{ element_2.title_url_text }}">#</a>
-                </h2>
-            </div>
+         <div class="w-full flex justify-center">
 
-
-            <div class='flex w-full'>
-                <div class='flex gap-6 w-full'>
-                    <div class='w-full w-1/2'>
-
-                        <div class="xl:text-left">
-                            <p>
-                                {{ element_2.content_left }}
-                            </p>
-                        </div>
+            <div class="col-span-12">
+                <div class="w-full">
+                    <div class="">
+                        <h5 class="section-header-title-small flex justify-center items-center">
+                            {{ element_2.title_small }}
+                        </h5>
+                        <h2 class="section-header-title flex justify-center" id="institutional-affiliation-and-development-of-the-repository">
+                            {{ element_2.title }}&nbsp;<a class="anchor-link" href="{{ element_2.title_url }}" aria-label="{{ element_2.title_url_text }}">#</a>
+                        </h2>
                     </div>
-                    <div class='w-full w-1/2'>
-                        <div class="text-center">
-                            {{ element_2.content_right }}
-                        </div>
-                    </div>
-
-
                 </div>
             </div>
         </div>
+        
+        <div class="static-heading-div text-center">
+            <h1 class="section-header-title-small">
+                {{ element_2.title_small }}
+            </h1>
+            <h2 class="section-header-title" id="institutional-affiliation-and-development-of-the-repository">
+                {{ element_2.title }}&nbsp;
+                <a class="anchor-link" href="{{ element_2.title_url }}" aria-label="{{ element_2.title_url_text }}">#</a>
+            </h2>
+        </div>
+
+
+        <div class='flex w-full'>
+            <div class='flex gap-6 w-full'>
+                <div class='w-full w-1/2'>
+
+                    <div class="xl:text-left">
+                        <p>
+                            {{ element_2.content_left }}
+                        </p>
+                    </div>
+                </div>
+                <div class='w-full w-1/2'>
+                    <div class="text-center">
+                        {{ element_2.content_right }}
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+
     </div>
 </div>
 
