--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -97,20 +97,23 @@
             </div>
         </div>
 
+        <div class='flex w-full'>
+            <div class='flex gap-6 w-full'>
+                <div class='w-full w-1/2'>
 
-
-        <div class="grid grid-cols-12 gap-y-8">                            
-            <div class="col-span-12 lg:col-span-6">
-                <div class="text-center xl:text-left">
-                    {{ element_3.content_left }}
+                    <div class="xl:text-left">
+                        <p>
+                            {{ element_3.content_left }}
+                        </p>
+                    </div>
+                </div>
+                <div class='w-full w-1/2'>
+                    <div class="text-center">
+                        {{ element_3.content_right }}
+                    </div>
                 </div>
             </div>
-
-            <div class="col-span-12 lg:col-span-6 text-center">
-                {{ element_3.content_right }}
-            </div>
         </div>
-
     </div>
 
 </div>
