--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -22,7 +22,7 @@
     <div class="w-full bg-white">
         <div class="w-screen bubble-line-container">
             <div class="image-wrapper w-full">
-                <img src="/browser/images/common/bubble-line.png" alt="Bubble line" width="100%" height="36px">
+                <img src="/browser/images/common/bubble-line.png" alt="Bubble line" width="100" height="36px">
             </div>
         </div>
     </div>
@@ -30,7 +30,7 @@
 <!-- box 2 -->
 <section>
     <div class="container-w980 mx-auto">
-        <div class="container mission-container">
+        <div class="mission-container">
 
             <div class="w-full flex justify-center">
 
@@ -264,136 +264,3 @@
         </div>
     </div>
 </section>
-
-OLD:
-
-<div class="max-w-[980px] mx-auto">
-    <div class="grid grid-cols-6 gap-4 w-full">
-        <div class="col-span-4 col-start-2">
-            <div class="w-full">
-                <div class="my-12 text-center">
-                    <h5 class="section-header-title-small">
-                        {{ cards.cards_header_title_small }}
-                    </h5>
-                    <h2  class="section-header-title">
-                        {{ cards.cards_header_title }}             
-                    </h2>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="max-w-[980px] mx-auto">
-    <div class="grid grid-cols-6 gap-4">
-        <div class="col-span-4 col-start-2 container-w980">
-
-            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
-                <div class="">
-                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
-                        <div class="h-full shadow bg-white flex flex-col border-0">
-                            <img
-                                class="card-img-top cards-static-images max-w-full h-auto"
-                                src="{{ cards.card_1_image }}" alt="{{ cards.card_1_title }}"
-                                loading="lazy"
-                                />
-
-                            <div class="card-body home-resources-body p-4 h-full">
-                                <h5 class="card-title mb-3">
-                                    <a class="text-left block"  href="{{ cards.card_1_url }}">{{ cards.card_1_title }}</a>
-                                </h5>
-
-                                <p class="card-text home-resources-text text-left  h-full">
-                                    {{ cards.card_1_text }}
-                                </p>
-
-                                <!-- display: contents -->
-                                <p class="contents">
-                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ cards.card_1_url }}">Show</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="">
-                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
-                        <div class="h-full shadow bg-white flex flex-col border-0">
-                            <img
-                                class="card-img-top cards-static-images max-w-full h-auto"
-                                src="{{ cards.card_2_image }}" alt="{{ cards.card_2_title }}"
-                                loading="lazy"
-                                />
-
-                            <div class="card-body home-resources-body p-4 h-full">
-                                <h5 class="card-title mb-3">
-                                    <a class="text-left block"  href="{{ cards.card_2_url }}">{{ cards.card_2_title }}</a>
-                                </h5>
-
-                                <p class="card-text home-resources-text text-left  h-full">
-                                    {{ cards.card_2_text }}
-                                </p>
-
-                                <!-- display: contents -->
-                                <p class="contents">
-                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ cards.card_2_url }}">Show</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="">
-                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
-                        <div class="h-full shadow bg-white flex flex-col border-0">
-                            <img
-                                class="card-img-top cards-static-images max-w-full h-auto"
-                                src="{{ cards.card_3_image }}" alt="{{ cards.card_3_title }}"
-                                loading="lazy"
-                                />
-
-                            <div class="card-body home-resources-body p-4 h-full">
-                                <h5 class="card-title mb-3">
-                                    <a class="text-left block"  href="{{ cards.card_3_url }}">{{ cards.card_3_title }}</a>
-                                </h5>
-
-                                <p class="card-text home-resources-text text-left  h-full">
-                                    {{ cards.card_3_text }}
-                                </p>
-
-                                <!-- display: contents -->
-                                <p class="contents">
-                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ cards.card_3_url }}">Show</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="">
-                    <div class="h-full shadow bg-white flex flex-col rounded-[12px] shadow overflow-hidden">
-                        <div class="h-full shadow bg-white flex flex-col border-0">
-                            <img
-                                class="card-img-top cards-static-images max-w-full h-auto"
-                                src="{{ cards.card_4_image }}" alt="{{ cards.card_4_title }}"
-                                loading="lazy"
-                                />
-
-                            <div class="card-body home-resources-body p-4 h-full">
-                                <h5 class="card-title mb-3">
-                                    <a class="text-left block"  href="{{ cards.card_4_url }}">{{ cards.card_4_title }}</a>
-                                </h5>
-
-                                <p class="card-text home-resources-text text-left  h-full">
-                                    {{ cards.card_4_text }}
-                                </p>
-
-                                <!-- display: contents -->
-                                <p class="contents">
-                                    <a class="btn basic-arche-btn home-resources-btn" href="{{ cards.card_4_url }}">Show</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
