--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -17,12 +17,10 @@
         </div>
     </div>
 
-
-
     <div class="w-full bg-white">
         <div class="w-screen bubble-line-container">
             <div class="image-wrapper w-full">
-                <img src="/browser/images/common/bubble-line.png" alt="Bubble line" width="100" height="36px">
+                <img src="/browser/images/common/bubble-line.png" alt="Bubble line" width="100%" height="36px">
             </div>
         </div>
     </div>
