--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -17,14 +17,18 @@
         </div>
     </div>
 
-    <div class="w-full bg-white">
-        <div class="w-screen bubble-line-container">
-            <div class="image-wrapper w-full">
-                <img src="/browser/images/common/bubble-line.png" alt="Bubble line" width="100%" height="36px">
-            </div>
+
+</section>
+
+<div class="w-full bg-white">
+    <div class="w-screen bubble-line-container">
+        <div class="image-wrapper w-full">
+            <img src="/browser/images/common/bubble-line.png" alt="Bubble line" width="100%" height="36px">
         </div>
     </div>
-</section>
+</div>
+
+
 <!-- box 2 -->
 <section>
     <div class="container-w980 mx-auto">
@@ -45,8 +49,6 @@
                     </div>
                 </div>
             </div>
-
-
 
 
             <div class='flex w-full'>
@@ -75,7 +77,7 @@
 
 <!-- box 3 -->
 
-<section>
+<section style="padding-top:10px;">
     <div class="container-w980 mx-auto">
         <div class="container mission-container">
             <div class="w-full flex justify-center">
@@ -120,17 +122,21 @@
 
 
 <!-- CARDS HEADER -->
-<section class="w-full bg-white">
+<section class="w-full bg-white " style="padding-top:10px;">    
     <div class="mx-auto w-full max-w-6xl px-6">
-        <div class="my-12 text-center">
-            <h5 class="section-header-title-small">
-                {{ cards.cards_header_title_small }}
-            </h5>
-            <h2 class="section-header-title">
-                {{ cards.cards_header_title }}
-            </h2>
+            <div class="static-heading-div text-center">
+                <h1 class="section-header-title-small">
+                     {{ cards.cards_header_title_small }}
+                </h1>
+                <h2 class="section-header-title" id="preservation-and-dissemination-of-digital-research-data">
+                     {{ cards.cards_header_title }}
+                </h2>
+            </div>
+            {{ element_1.content_top }}
+
+            {{ element_1.content_bottom }}
         </div>
-    </div>
+    
 </section>
 
 <!-- CARDS -->
