--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -122,7 +122,7 @@
 
 
 <!-- CARDS HEADER -->
-<section class="w-full bg-white " style="padding-top:10px;">    
+<section class="w-full bg-white " style="margin-top: 10px;">    
     <div class="mx-auto w-full max-w-6xl px-6">
             <div class="static-heading-div text-center">
                 <h1 class="section-header-title-small">
