--- a/arche-react/en/about-arche.html
+++ b/arche-react/en/about-arche.html
@@ -30,7 +30,7 @@
 
 
 <!-- box 2 -->
-<section>
+<section style="margin-top: 3rem;">    
     <div class="container-w980 mx-auto">
         <div class="mission-container">
 
@@ -77,7 +77,7 @@
 
 <!-- box 3 -->
 
-<section style="padding-top:10px;">
+<section style="margin-top: 3rem;">    
     <div class="container-w980 mx-auto">
         <div class="container mission-container">
             <div class="w-full flex justify-center">
@@ -122,7 +122,7 @@
 
 
 <!-- CARDS HEADER -->
-<section class="w-full bg-white " style="margin-top: 10px;">    
+<section class="w-full bg-white " style="margin-top: 3rem;">    
     <div class="mx-auto w-full max-w-6xl px-6">
             <div class="static-heading-div text-center">
                 <h1 class="section-header-title-small">
@@ -131,10 +131,7 @@
                 <h2 class="section-header-title" id="preservation-and-dissemination-of-digital-research-data">
                      {{ cards.cards_header_title }}
                 </h2>
-            </div>
-            {{ element_1.content_top }}
-
-            {{ element_1.content_bottom }}
+            </div>            
         </div>
     
 </section>
