--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -1,138 +1,123 @@
 <!-- Element 1 -->
 
-<div class="w-full flex justify-center bg-white">
-    <div class="grid grid-cols-6 gap-4">
-        <div class="col-span-4 col-start-2">
-            <div class="w-full">
-                <div class="my-12 text-center">
-                    <h5 class="section-header-title-small">
-                        {{ element_1.header_title_small }} 
-                    </h5>
-                    <h2 id="how-does-the-data-deposition-work" class="section-header-title">
-                        {{ element_1.header_title }}
-                        <a href="#how-does-the-data-deposition-work" class="anchor-link" aria-label="Link to this section: How does the data deposition work?">#</a>
-                    </h2>
-                </div>
+<section>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">
+                <h1 class="section-header-title-small">
+                    {{ element_1.header_title_small }} 
+                </h1>
+                <h2 class="section-header-title" id="preservation-and-dissemination-of-digital-research-data">
+                    {{ element_1.header_title }}&nbsp;                    
+                    <a class="anchor-link" href="{{ element_1.header_url }}" aria-label="{{ element_1.header_url_text }}">#</a>
+                </h2>
             </div>
-        </div>
-    </div>
-</div>
-
-<div class="w-full flex justify-center">
-
-    <div class="grid grid-cols-6 gap-4">     
-
-        <div class="col-span-4 col-start-2">
-            <div class="w-full ">
-                <div class="container-w980">
-                    <div class="grid grid-cols-12 gap-y-8">
-                        <div class="col-span-12 lg:col-span-6">
-                            <div class="text-center xl:text-left">
-                                {{ element_1.video_url }}
-                            </div>
-                        </div>
-
-                        <div class="col-span-12 lg:col-span-6 text-center">
-                            {{ element_1.text }}
-                        </div>
+            <div class='flex w-full'>
+                <div class='flex gap-6 w-full'>
+                    <div class='w-full w-1/2'>
+                        {{ element_1.video_url }}
                     </div>
-
+                    <div class='w-full w-1/2'>
+                        {{ element_1.text }}
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-</div>
 
-<div class="w-full flex justify-center bg-white">
-    <div class="w-full bubble-line-container pt-2">
+</section>
+
+<div class="w-full bg-white">
+    <div class="w-screen bubble-line-container">
         <div class="image-wrapper w-full">
             <img src="/browser/images/common/bubble-line.png" alt="Bubble line" width="100%" height="36px">
         </div>
     </div>
 </div>
 
+
 <div class="w-full flex justify-center">
     <div class="grid w-full grid-cols-6 gap-4">     
         <div class="col-span-4 col-start-2 w-full flex justify-center">            
-                <div class="container-w980 w-full">
-                    <div class="grid grid-cols-12 gap-y-8">
-                        <div class="accordion-static col-span-full w-full">
-                            <!-- Item 1 -->
-                            <details name="acc" class="group">
-                                <summary
-                                    class="flex items-center justify-between cursor-pointer p-4 select-none
-                                    transition-colors open:bg-blue-50 open:text-blue-700
-                                    [&::-webkit-details-marker]:hidden">
-                                    <span class="static-acc-title">{{ element_2.accordion_1_title }}</span>
-                                    <!-- chevron -->
-                                    <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                    <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
-                                    </svg>
-                                </summary>
-                                <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
-                                    <div class="p-4 pt-0 text-sm accordion-static-body">
-                                        {{ element_2.accordion_1_body }}
-                                    </div>
+            <div class="container-w980 w-full">
+                <div class="grid grid-cols-12 gap-y-8">
+                    <div class="accordion-static col-span-full w-full">
+                        <!-- Item 1 -->
+                        <details name="acc" class="group">
+                            <summary
+                                class="flex items-center justify-between cursor-pointer p-4 select-none
+                                transition-colors open:bg-blue-50 open:text-blue-700
+                                [&::-webkit-details-marker]:hidden">
+                                <span class="static-acc-title">{{ element_2.accordion_1_title }}</span>
+                                <!-- chevron -->
+                                <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
+                                </svg>
+                            </summary>
+                            <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                                <div class="p-4 pt-0 text-sm accordion-static-body">
+                                    {{ element_2.accordion_1_body }}
                                 </div>
-                            </details>
+                            </div>
+                        </details>
 
-                            <!-- Item 2 -->
-                            <details name="acc" class="group">
-                                <summary
-                                    class="flex items-center justify-between cursor-pointer p-4 select-none
-                                    transition-colors open:bg-blue-50 open:text-blue-700
-                                    [&::-webkit-details-marker]:hidden">
-                                    <span class="static-acc-title">{{ element_2.accordion_2_title }}</span>
-                                    <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                    <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
-                                    </svg>
-                                </summary>
-                                <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
-                                    <div class="p-4 pt-0 text-sm accordion-static-body">
-                                        {{ element_2.accordion_2_body }}
-                                    </div>
+                        <!-- Item 2 -->
+                        <details name="acc" class="group">
+                            <summary
+                                class="flex items-center justify-between cursor-pointer p-4 select-none
+                                transition-colors open:bg-blue-50 open:text-blue-700
+                                [&::-webkit-details-marker]:hidden">
+                                <span class="static-acc-title">{{ element_2.accordion_2_title }}</span>
+                                <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
+                                </svg>
+                            </summary>
+                            <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                                <div class="p-4 pt-0 text-sm accordion-static-body">
+                                    {{ element_2.accordion_2_body }}
                                 </div>
-                            </details>
+                            </div>
+                        </details>
 
-                            <!-- Item 3 -->
-                            <details name="acc" class="group">
-                                <summary
-                                    class="flex items-center justify-between cursor-pointer p-4 select-none
-                                    transition-colors open:bg-blue-50 open:text-blue-700
-                                    [&::-webkit-details-marker]:hidden">
-                                    <span class="static-acc-title">{{ element_2.accordion_3_title }}</span>
-                                    <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                    <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
-                                    </svg>
-                                </summary>
-                                <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
-                                    <div class="p-4 pt-0 text-sm accordion-static-body">
-                                        {{ element_2.accordion_3_body }}
-                                    </div>
+                        <!-- Item 3 -->
+                        <details name="acc" class="group">
+                            <summary
+                                class="flex items-center justify-between cursor-pointer p-4 select-none
+                                transition-colors open:bg-blue-50 open:text-blue-700
+                                [&::-webkit-details-marker]:hidden">
+                                <span class="static-acc-title">{{ element_2.accordion_3_title }}</span>
+                                <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
+                                </svg>
+                            </summary>
+                            <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                                <div class="p-4 pt-0 text-sm accordion-static-body">
+                                    {{ element_2.accordion_3_body }}
                                 </div>
-                            </details>
+                            </div>
+                        </details>
 
-                            <details name="acc" class="group">
-                                <summary
-                                    class="flex items-center justify-between cursor-pointer p-4 select-none
-                                    transition-colors open:bg-blue-50 open:text-blue-700
-                                    [&::-webkit-details-marker]:hidden">
-                                    <span class="static-acc-title">{{ element_2.accordion_4_title }}</span>
-                                    <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                    <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
-                                    </svg>
-                                </summary>
-                                <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
-                                    <div class="p-4 pt-0 text-sm accordion-static-body">
-                                        {{ element_2.accordion_4_body }}
-                                    </div>
+                        <details name="acc" class="group">
+                            <summary
+                                class="flex items-center justify-between cursor-pointer p-4 select-none
+                                transition-colors open:bg-blue-50 open:text-blue-700
+                                [&::-webkit-details-marker]:hidden">
+                                <span class="static-acc-title">{{ element_2.accordion_4_title }}</span>
+                                <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
+                                </svg>
+                            </summary>
+                            <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                                <div class="p-4 pt-0 text-sm accordion-static-body">
+                                    {{ element_2.accordion_4_body }}
                                 </div>
-                            </details>
-                        </div>
+                            </div>
+                        </details>
                     </div>
                 </div>
-            
+            </div>
+
         </div>
     </div>
 </div>
