--- a/arche-react/en/deposition-process.html
+++ b/arche-react/en/deposition-process.html
@@ -51,7 +51,7 @@
                                 [&::-webkit-details-marker]:hidden">
                                 <span class="static-acc-title">{{ element_2.accordion_1_title }}</span>
                                 <!-- chevron -->
-                                <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <svg width="16px" height="16px" class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                 <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
                                 </svg>
                             </summary>
@@ -69,7 +69,7 @@
                                 transition-colors open:bg-blue-50 open:text-blue-700
                                 [&::-webkit-details-marker]:hidden">
                                 <span class="static-acc-title">{{ element_2.accordion_2_title }}</span>
-                                <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                                <svg width="16px" height="16px" class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                 <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
                                 </svg>
                             </summary>
